--- a/src/client/site/components/Header/Header.less
+++ b/src/client/site/components/Header/Header.less
@@ -4,12 +4,15 @@
     top: 0px;
     z-index: 1; 
     width: 100%;
-    border-bottom: 1px solid #e8e8e8;
-    padding: @small-padding;
-    padding-bottom: 0px;
+    border-bottom: @border;
+    background: white;
+    box-shadow: @shadow;
     
     .wrapper {
         max-width: @max-width;
         margin: 0 auto;
+        padding: @small-padding;
+        padding-bottom: 0px;
     }
+
 }
