--- a/src/client/site/components/Header/Logo/Logo.less
+++ b/src/client/site/components/Header/Logo/Logo.less
@@ -12,5 +12,13 @@
     }
     img {
         max-height: 70px;
+        @media @tablet {
+            margin-top: 5%;
+            margin-bottom: -7%;
+        }
+        @media @desktop {
+            margin-top: 5%;
+            margin-bottom: -7%;
+        }
     }
 }
