--- a/src/client/site/components/Header/MainMenu/MainMenu.less
+++ b/src/client/site/components/Header/MainMenu/MainMenu.less
@@ -1,4 +1,9 @@
 .root {
     line-height: 64px;
     border-bottom: none !important;
+    margin: 0 auto !important;
+    display: table;
+}
+.collapseButton {
+
 }
