--- a/src/client/site/components/Header/SelectCity/SelectCity.less
+++ b/src/client/site/components/Header/SelectCity/SelectCity.less
@@ -1,4 +1,15 @@
 .root {
     margin: 0 auto;
     text-align: center;
+
+    .cityInfo {
+
+        .cityName {
+            font-size: 1.75em;
+            
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
 }
