--- a/src/client/site/components/Header/Header.less
+++ b/src/client/site/components/Header/Header.less
@@ -7,6 +7,17 @@
     border-bottom: @border;
     background: white;
     box-shadow: @shadow;
+
+    //TODO проверить
+    @media @phone {
+        min-height: 120px;
+    }
+    @media @tablet {
+        min-height: 120px;
+    }
+    @media @desktop {
+        min-height: 120px;
+    }
     
     .wrapper {
         max-width: @max-width;
