--- a/src/client/site/components/Header/Logo/Logo.less
+++ b/src/client/site/components/Header/Logo/Logo.less
@@ -13,12 +13,12 @@
     img {
         max-height: 70px;
         @media @tablet {
-            margin-top: 5%;
-            margin-bottom: -7%;
+            margin-top: @margin-top-head;
+            margin-bottom: @margin-bottom-head;
         }
         @media @desktop {
-            margin-top: 5%;
-            margin-bottom: -7%;
+            margin-top: @margin-top-head;
+            margin-bottom: @margin-bottom-head;
         }
     }
 }
