--- a/src/client/site/components/common/common.less
+++ b/src/client/site/components/common/common.less
@@ -4,3 +4,6 @@
 @small-padding: 10px;
 @border: 1px solid #e8e8e8;
 @shadow: 0 0 20px #cecece;
+@green: #2dd902;
+@margin-top-head: 5%;
+@margin-bottom-head: -9%;
