--- a/src/client/site/components/common/common.less
+++ b/src/client/site/components/common/common.less
@@ -4,6 +4,8 @@
 @small-padding: 10px;
 @border: 1px solid #e8e8e8;
 @shadow: 0 0 20px #cecece;
+@blue: #1890ff;
 @green: #2dd902;
 @margin-top-head: 5%;
 @margin-bottom-head: -9%;
+@anim-time: 0.5s;
