--- a/src/client/site/components/common/common.less
+++ b/src/client/site/components/common/common.less
@@ -1,15 +1,13 @@
 @import './media.less';
 
-@max-width: 1090px;
 @small-padding: 10px;
 @border: 1px solid #e8e8e8;
 @shadow: 0 0 20px #cecece;
+
 @blue: #1890ff;
 @green: #2dd902;
+@content-color: white;
+
 @margin-top-head: 5%;
 @margin-bottom-head: -9%;
 @anim-time: 0.5s;
-
-body {
-    background-color: #f8f8f8;
-}
