--- a/src/client/site/components/Content/Content.less
+++ b/src/client/site/components/Content/Content.less
@@ -1,7 +1,5 @@
-@import '../common/common.less';
+//@import '../common/common.less';
 
 .root {
-    max-width: @max-width;
-    margin: 0 auto;
-    padding: @small-padding;
+    
 }
