--- a/src/client/site/components/pages/LoginPage/LoginPage.less
+++ b/src/client/site/components/pages/LoginPage/LoginPage.less
@@ -1,3 +1,5 @@
+@import '../../common/common.less';
+
 .root {
     position: absolute;
     top: 50%;
@@ -7,7 +9,7 @@
     //height: 320px;
     padding: 36px;
     box-shadow: 0 0 100px rgba(0,0,0,0.08);
-    background-color: white;
+    background-color: @content-color;
 
     .error{
         color: red;
