OrderPage: append inputs: howOld, description, address(with ymaps), phone, name; ymaps api 2.0 -> 2.1

--- a/src/client/site/components/common/app.css
+++ b/src/client/site/components/common/app.css
@@ -6,3 +6,9 @@ body {
     margin: 0 auto;
     padding: 10px;
 }
+.ant-form-item-label label {
+    color: #2f2f2f;
+    display: block;
+    font-size: 1.58em;
+    font-weight: bold;
+}
