--- a/src/client/site/components/Content/OrderForm/OrderForm.less
+++ b/src/client/site/components/Content/OrderForm/OrderForm.less
@@ -7,7 +7,23 @@
     img {
         max-width: 100px;
     }
-    h1{
+    h1 {
         text-align: center;
+    }
+    .otherText {
+        margin-bottom: 0px;
+        padding-top: 14px;
+        color: @blue;
+        @media @phone {
+            & {
+                padding-top: 0px;
+            }
+        }
+    }
+    .arrow {
+        font-size: 2.5em;
+        margin-bottom: 0.5em;
+        color: @blue;
+        line-height: 0.7em;
     }
 }
