--- a/src/client/site/components/common/common.less
+++ b/src/client/site/components/common/common.less
@@ -1,12 +1,13 @@
 @import './media.less';
 
 @small-padding: 10px;
-@border: 1px solid #e8e8e8;
+@border: 1px solid lightgray;
 @shadow: 0 0 20px #cecece;
 
 @blue: #1890ff;
 @green: #2dd902;
 @content-color: white;
+@font-color: rgba(0, 0, 0, 0.65);
 
 @margin-top-head: 5%;
 @margin-bottom-head: -9%;
