begin category edit page, category create page

--- a/src/client/site/components/common/common.less
+++ b/src/client/site/components/common/common.less
@@ -3,6 +3,7 @@
 @small-padding: 10px;
 @border: 1px solid lightgray;
 @shadow: 0 0 20px #cecece;
+@shadow-small: 0 0 10px #cecece;
 
 @blue: #1890ff;
 @green: #2dd902;
