categories and gallery Lists with pagination; get categories without redux store

--- a/src/client/admin/components/Content/ContentList/ContentList.less
+++ b/src/client/admin/components/Content/ContentList/ContentList.less
@@ -3,25 +3,26 @@
 .root {
     padding-top: 20px;
     
-    li {
-        list-style-type: none;
+    .listItem {
+        /*list-style-type: none;
         display: inline-block;
         background: white;
         width: 100%;
         border: @border;
         padding: 1%;
-
-        &:hover {
+        */
+        /*&:hover {
             border-color: @blue;
             box-shadow: @shadow;
             color: @blue;
-        }
+        }*/
 
         img {
             width: 50px;
+            height: 50px;
         }
         span {
-            padding: 3%;
+            padding: 20px;
         }
         a {
             color: @font-color;
