refactoring component directories; gallery: uploaded files set to List, delete files on directory

--- a/src/client/admin/components/pages/GalleryPage/GalleryPage.less
+++ b/src/client/admin/components/pages/GalleryPage/GalleryPage.less
@@ -1,8 +1,17 @@
 .root {
     img {
-        max-width: 100px;
+        height: 100px;
+        width: auto;
         margin: 0 auto;
         padding: 10px;
         padding-top: 24px;
+    }
+
+    .deleteBtn {
+        text-align: right;
+    }
+
+    .card {
+        /*min-height: 195px;*/
     }
 }
