delete image with Popconfirm; fix unselect image on modal

--- a/src/client/admin/components/content/Gallery/Gallery.less
+++ b/src/client/admin/components/content/Gallery/Gallery.less
@@ -1,3 +1,5 @@
+@import '../../style/common.less';
+
 .root {
     img {
         height: 100px;
@@ -10,7 +12,7 @@
         text-align: right;
     }
     .selected {
-        //border: 2px solid blue;
-        background-color: lightblue;
+        transition: all .03s !important;
+        border-color: @blue !important;
     }
 }
