breadcrumbs on admin app (without order pages)

--- a/src/client/admin/components/style/GetAll.less
+++ b/src/client/admin/components/style/GetAll.less
@@ -1,8 +1,8 @@
-@import '../../../style/common.less';
+@import './common.less';
 
 .root {
     padding-top: 20px;
-    max-width: 900px;
+    max-width: @max-width-list;
     background-color: none !important;
     padding-left: 1%;
     
