get orders by city and date; begin OrdersFilter: date; fixed orders links on OrderNotification and ContentList

--- a/src/client/admin/components/Content/ContentList/ContentList.less
+++ b/src/client/admin/components/Content/ContentList/ContentList.less
@@ -2,7 +2,7 @@
 
 .root {
     padding-top: 20px;
-    
+
     .listItem {
         /*list-style-type: none;
         display: inline-block;
@@ -16,16 +16,19 @@
             box-shadow: @shadow;
             color: @blue;
         }*/
-
         img {
             width: 50px;
             height: 50px;
         }
-        span {
-            padding: 20px;
-        }
         a {
             color: @font-color;
+            width: 100%;
+            display: block;
+        }
+        .property {
+            padding: 20px;
+            display: inline-block;
+            width: 20%;
         }
     }
 
@@ -33,7 +36,7 @@
         float: right;
         font-size: 1.5em;
         padding: 4%;
-        
+
         i {
             padding-left: 20px;
         }
