admin menu: append submenu and icons; begin order edit page; LoadedContentView component; orders sort by date

--- a/src/client/site/components/Content/OrderForm/OrderForm.less
+++ b/src/client/site/components/Content/OrderForm/OrderForm.less
@@ -26,4 +26,8 @@
         color: @blue;
         line-height: 0.7em;
     }
+    .inline {
+        display: inline-block;
+        padding-right: 8px;
+    }
 }
