--- a/src/client/admin/components/style/GetAll.less
+++ b/src/client/admin/components/style/GetAll.less
@@ -1,9 +1,9 @@
 @import './common.less';
 
 .root {
-    padding-top: 20px;
-    max-width: @max-width-list;
+    //padding-top: 20px;
+    //max-width: @max-width-list;
     background-color: none !important;
-    padding-left: 1%;
+    //padding-left: 1%;
     
 }
