order edit page: select workers and order status

--- a/src/client/admin/components/style/Edit.less
+++ b/src/client/admin/components/style/Edit.less
@@ -11,4 +11,16 @@
             line-height: 1.5
         }
     }
+    /* orders */
+    .inline {
+        display: inline-block;
+        padding-right: 8px;
+    }
+    .textItem {
+
+    }
+    label {
+        font-weight: bold;
+        /*line-height: 40px;*/
+    }
 }
