OrderFilter: status, order id

--- a/src/client/admin/components/style/app.css
+++ b/src/client/admin/components/style/app.css
@@ -18,3 +18,7 @@ button {
 .ant-list-pagination {
     text-align: center !important;
 }
+.inline {
+    display: inline-block;
+    padding-right: 8px;
+}
