append images on TextEditor component

--- a/src/client/admin/components/Content/TextEditor/TextEditor.less
+++ b/src/client/admin/components/Content/TextEditor/TextEditor.less
@@ -5,14 +5,25 @@
 	.button {
 		color: #aaa;
 		cursor: pointer;
+		border-color: white;
 	}
 	.activeButton	{
 		color: #1890ff;
 		cursor: pointer;
+		border-color: white;
 	}
 	.toolbar {
 		display: inline-block;
 		position: relative;
     	padding: 5px 0px 10px;
+	}
+	img {
+		width: auto;
+		display: block;
+  		max-width: 100%;
+  		box-shadow: none;
+	}
+	.selectedImg {
+		box-shadow: 0 0 0 2px #1890ff;
 	}
 }
