--- a/src/client/admin/components/Content/TextEditor/TextEditor.less
+++ b/src/client/admin/components/Content/TextEditor/TextEditor.less
@@ -18,9 +18,9 @@
     	padding: 5px 0px 10px;
 	}
 	img {
-		width: auto;
+		width: auto !important;
 		display: block;
-  		max-width: 100%;
+  		max-width: 100% !important;
   		box-shadow: none;
 	}
 	.selectedImg {
