orders calendar page

--- a/src/client/admin/components/style/app.css
+++ b/src/client/admin/components/style/app.css
@@ -45,3 +45,6 @@ button {
   font-size: 18px;
   vertical-align: text-bottom;
 }
+.ant-fullcalendar-header .ant-radio-group {
+    display: none;
+}
