--- a/src/client/site/components/Header/Header.less
+++ b/src/client/site/components/Header/Header.less
@@ -7,14 +7,15 @@
     border-bottom: @border;
     background: @content-color;
     box-shadow: @shadow;
+    min-height: 125px;
 
     @media @phone {
-        min-height: 120px;
+        
     }
     @media @tablet {
-        min-height: 120px;
+        position: fixed;
     }
     @media @desktop {
-        min-height: 120px;
+        position: fixed;
     }
 }
