site app: home-page content, fix SelectCity; admin app: orders filter on mobile, fix Gallery Modal width

--- a/src/client/admin/components/style/app.css
+++ b/src/client/admin/components/style/app.css
@@ -21,6 +21,7 @@ button {
 .inline {
     display: inline-block;
     padding-right: 8px;
+    margin-bottom: 0px !important;
 }
 @font-face {
   font-family: 'Material Icons';
