--- a/src/client/site/components/Header/Phone/Phone.less
+++ b/src/client/site/components/Header/Phone/Phone.less
@@ -8,7 +8,8 @@
     }
     .button {
         line-height: 65px;
-        height: 70px;
+        //height: 70px;
+        height: auto;
         display: block;
         font-size: 1.4em;
         @media @tablet {
