--- a/src/client/site/components/style/common.less
+++ b/src/client/site/components/style/common.less
@@ -6,7 +6,7 @@
 @shadow-small: 0 0 10px #cecece;
 
 @blue: #1890ff;
-@green: #2dd902;
+@green: #26bd00;
 @content-color: white;
 @font-color: rgba(0, 0, 0, 0.65);
 
