site app pages: home, shares, questions, testimonials, 404

--- a/src/client/site/components/pages/Home/Home.less
+++ b/src/client/site/components/pages/Home/Home.less
@@ -4,6 +4,7 @@
         margin-top: 20px;
     }   
     .whyWe {
+        margin-top: 20px;
         strong {
             text-align: center;
             display: block;
@@ -12,6 +13,9 @@
             max-height: 50px;
             display: block;
             margin: 0 auto;
+        }
+        h3 {
+            margin-bottom: 22px;
         }
     }
 }
