--- a/src/client/site/components/style/app.css
+++ b/src/client/site/components/style/app.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f8f8f8;
+    font-size: 15px;
 }
 .wrapper {
     max-width: 1090px;
@@ -9,12 +10,12 @@ body {
 .ant-form-item-label label {
     color: #2f2f2f;
     display: block;
-    font-size: 1.58em;
+    font-size: 23px;
     font-weight: bold;
 }
 h1, h2, h3 {
     text-align: center;
-    font-size: 2em;
+    font-size: 28px;
     padding-top: 15px;    
 }
 .center {
@@ -22,12 +23,12 @@ h1, h2, h3 {
 }
 strong {
     padding: 5px;
-    font-size: 1.5em;
+    font-size: 21px;
     color: rgba(0, 0, 0, 0.85);
 }
 .super-strong {
     color: rgb(24, 144, 255);
-    font-size: 2.225em;
+    font-size: 31.3px;
     text-transform: uppercase;
     margin-top: -15px;
     display: block;
