--- a/src/client/site/components/Router/Router.less
+++ b/src/client/site/components/Router/Router.less
@@ -6,8 +6,10 @@
     }
     @media @tablet {
         margin-top: 125px !important;
+        min-height: 668px;
     }
     @media @desktop {
         margin-top: 125px !important;
+        min-height: 768px;
     }
 }
