--- a/src/client/site/components/Content/BigButton/BigButton.less
+++ b/src/client/site/components/Content/BigButton/BigButton.less
@@ -21,4 +21,9 @@
         background-color: @green;
         border-color: @green;
     }
+
+    @media @phone {
+        font-size: 1em;
+        padding: 10px 30px;
+    }
 }
