--- a/src/client/site/components/Content/CategoryItem/CategoryItem.less
+++ b/src/client/site/components/Content/CategoryItem/CategoryItem.less
@@ -34,8 +34,12 @@
 
     .name {
         text-align: center;
-        font-size: 1.1em;
+        font-size: 16px;
         padding-left: 5%;
         padding-right: 5%;
+
+        @media @phone {
+            font-size: 20px;
+        }
     }
 }
