--- a/src/client/site/components/pages/Login/Login.less
+++ b/src/client/site/components/pages/Login/Login.less
@@ -1,15 +1,23 @@
 @import '../../style/common.less';
 
 .root {
-    position: absolute;
+    /*position: absolute;
     top: 50%;
     left: 50%;
-    margin: -160px 0 0 -160px;
+    margin: -160px 0 0 -160px;*/
+    margin-top: 10%;
     width: 320px;
     //height: 320px;
     padding: 36px;
     box-shadow: 0 0 100px rgba(0,0,0,0.08);
     background-color: @content-color;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media @phone {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
 
     .error{
         color: red;
