settings for heroku; sockets doesn't url; site components with loaded data wrapped in LoadedContentView; handling error category pathes on site app; phone button for mobile resolutions

--- a/src/client/site/components/Content/BigButton/BigButton.less
+++ b/src/client/site/components/Content/BigButton/BigButton.less
@@ -8,6 +8,7 @@
     margin: 0 auto;
     margin-top: 5px;
     padding: 15px 35px;
+    box-shadow: 2px 3px 10px #cecece;
 
     strong {
         text-transform: uppercase;
@@ -20,6 +21,11 @@
     &:hover {
         background-color: @green;
         border-color: @green;
+    }
+
+    &[disabled] {
+        background-color: @blue;
+        color: white;
     }
 
     @media @phone {
