--- a/src/client/site/components/Header/SelectCity/SelectCity.less
+++ b/src/client/site/components/Header/SelectCity/SelectCity.less
@@ -16,13 +16,18 @@
     }
 
     .cityInfo {
-
         .cityName {
-            font-size: 1.75em;
-            
+            font-size: 1.75em;    
+            text-decoration: underline;        
             &:hover {
-                text-decoration: underline;
+                color: rgb(38, 189, 0);
             }
+        }
+        .question {
+            text-align: center;
+            display: block;
+            margin: 0 auto;
+            margin-bottom: -10px;
         }
     }
 }
