--- a/src/client/site/components/pages/Order/Order.less
+++ b/src/client/site/components/pages/Order/Order.less
@@ -14,6 +14,7 @@
             margin: 0 auto;
             width: 90%;
             text-align: center;
+            box-shadow: 0px 0px 10px #cecece;
 
             strong {
                 font-size: 15px;
@@ -27,5 +28,9 @@
         @media (max-width: 768px) {
             display: none;
         }
-    }
+    }    
+}
+.spin {
+    margin: 0 auto;
+    width: 100%;
 }
