--- a/src/client/site/components/Content/OrderForm/OrderForm.less
+++ b/src/client/site/components/Content/OrderForm/OrderForm.less
@@ -44,6 +44,7 @@
         padding: 15px 35px;
         height: auto;
         font-size: 18px;
+        box-shadow: 2px 3px 10px #cecece;
         
         &:hover {
             background-color: #26bd00;
